# template-gtest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_and_test.sh  check_env.sh  rebuild.sh
boards/nucleo-g070rb/: stm32g0xx_hal_conf.h  stm32g0xx_it.c  tx_initialize_low_level.c  tx_port_hook.c
include/core/: main.h  status.h  tx_user.h
src/: CMakeLists.txt  counter.c  counter.h  main.c
tests/: CMakeLists.txt  test_counter.cpp
